--- a/index.html
+++ b/index.html
@@ -192,5 +192,9 @@
   <script src="./js/scrollspy.min.js"></script>
   <script src="./js/aos.min.js"></script>
   <script src="./js/owl.carousel.min.js"></script>
+  <script src="./js/eruda.js"></script>
+  <script type="text/javascript" charset="utf-8">
+    eruda.init();
+  </script>
 </body>
 </html>
