add meta seo tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:image" content="./img/thumbnail.jpg"/>
+  <meta name="description" content="Hai, perkenalkan saya Gede Putra Arjawa.Saya seorang pelajar SMK asal Indonesia.Saat ini saya sedang fokus pada perancangan dan pengem...">
+  <meta name=”robots” content="index, follow">
   <title>Gede Putra Arjawa</title>
   <link rel="stylesheet" href="./css/tailwind.min.css">
   <link rel="stylesheet" href="./css/fonts.min.css">
@@ -13,6 +16,7 @@
   <link rel="stylesheet" href="./css/owl.carousel.min.css">
   <link rel="stylesheet" href="./css/owl.theme.default.min.css">
   <link rel="stylesheet" href="./css/main.min.css">
+  <link rel="icon" type="image/jpeg" href="./img/favicon.jpg">
 </head>
 <body class="flex flex-col h-screen justify-between bg-white dark:bg-black">
   <div id="content">
@@ -75,7 +79,7 @@
         </div>
         <div class="h-full w-auto py-4">
           <div class="p-4">
-            <h2 id="mark" class="relative text-2xl font-custom dark:text-white">Experience</h2>
+            <h2 id="mark" class="relative text-2xl font-custom dark:text-white">Experiences</h2>
           </div>
         <div class="flex overflow-x-scroll hide-scroll-bar">
           <div class="flex flex-nowrap p-4 space-x-4">
@@ -136,9 +140,9 @@
   </main>
   <footer>
     <div id="contacts" class="p-10 flex justify-center space-x-10 dark:text-white">
-      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/arjawa"><i class="fab fa-github"></i></a>
       <a href="mailto:arjawa123@gmail.com"><i class="fas fa-envelope"></i></a>
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://www.facebook.com/gede.putraarjawa"><i class="fab fa-facebook-f"></i></a>
       <a href="https://wa.me/62881037699189"><i class="fab fa-whatsapp"></i></a>
     </div>
     <div class="w-full h-10 bg-gray-200 dark:bg-gray-900">
