--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta property="og:image" content="./img/thumbnail.jpg"/>
+  <meta property="og:image" content="https://grapeice.tk/img/thumbnail.jpg"/>
   <meta name="description" content="Hai, perkenalkan saya Gede Putra Arjawa.Saya seorang pelajar SMK asal Indonesia.Saat ini saya sedang fokus pada perancangan dan pengem...">
   <meta name=”robots” content="index, follow">
   <title>Gede Putra Arjawa</title>
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="./css/owl.carousel.min.css">
   <link rel="stylesheet" href="./css/owl.theme.default.min.css">
   <link rel="stylesheet" href="./css/main.min.css">
-  <link rel="icon" type="image/jpeg" href="./img/favicon.jpg">
+  <link rel="icon" type="image/jpeg" href="https://grapeice.tk/img/favicon.jpg">
 </head>
 <body class="flex flex-col h-screen justify-between bg-white dark:bg-black">
   <div id="content">
