--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="./css/owl.carousel.min.css">
   <link rel="stylesheet" href="./css/owl.theme.default.min.css">
   <link rel="stylesheet" href="./css/main.min.css">
-  <link rel="icon" type="image/jpeg" href="https://grapeice.tk/img/favicon.jpg">
+  <link rel="icon" type="image/jpeg" href="https://grapeice.tk/img/favicon.jpeg">
 </head>
 <body class="flex flex-col h-screen justify-between bg-white dark:bg-black">
   <div id="content">
