--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:image" content="https://grapeice.tk/img/thumbnail.jpg"/>
   <meta name="description" content="Hai, perkenalkan saya Gede Putra Arjawa.Saya seorang pelajar SMK asal Indonesia.Saat ini saya sedang fokus pada perancangan dan pengem...">
   <meta name=”robots” content="index, follow">
-  <title>Gede Putra Arjawa</title>
+  <title>Arjawa</title>
   <link rel="stylesheet" href="./css/tailwind.min.css">
   <link rel="stylesheet" href="./css/fonts.min.css">
   <link rel="stylesheet" href="./css/burger.min.css">
