--- a/404.html
+++ b/404.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta property="og:image" content="https://grapeice.tk/img/thumbnail.jpg"/>
+  <meta property="og:image" content="https://arjawa.tk/img/thumbnail.jpg"/>
   <meta name="description" content="File Not Found">
   <title>404</title>
-  <link rel="stylesheet" href="./css/darkmode.css">
+  <link rel="stylesheet" href="./css/tailwind.min.css">
   <link rel="stylesheet" href="./css/fonts.min.css">
   <link rel="stylesheet" href="./css/all.min.css">
-  <link rel="icon" type="image/jpeg" href="https://grapeice.tk/img/favicon.jpeg">
+  <link rel="icon" type="image/jpeg" href="https://arjawa.tk/img/favicon.jpeg">
 </head>
 <body class="bg-white dark:bg-black">
   <div class="flex justify-center items-center h-screen w-screen p-5">
