--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@
   <meta property="og:image" content="https://arjawa.tk/img/thumbnail.jpg"/>
   <meta name="description" content="File Not Found">
   <title>404</title>
-  <link rel="stylesheet" href="./css/tailwind.min.css">
-  <link rel="stylesheet" href="./css/fonts.min.css">
-  <link rel="stylesheet" href="./css/all.min.css">
+  <link rel="stylesheet" href="https://arjawa.tk//css/tailwind.min.css">
+  <link rel="stylesheet" href="https://arjawa.tk/css/fonts.min.css">
+  <link rel="stylesheet" href="https://arjawa.tk/css/all.min.css">
   <link rel="icon" type="image/jpeg" href="https://arjawa.tk/img/favicon.jpeg">
 </head>
 <body class="bg-white dark:bg-black">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <script src="./js/jquery.min.js"></script>
+  <script src="https://arjawa.tk/js/jquery.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
       // darkmode
