--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="description" content="Hai, perkenalkan saya Gede Putra Arjawa.Saya seorang pelajar SMK asal Indonesia.Saat ini saya sedang fokus pada perancangan dan pengem...">
   <meta name=”robots” content="index, follow">
   <title>Arjawa</title>
-  <link rel="stylesheet" href="./css/tailwind.min.css">
-  <link rel="stylesheet" href="./css/fonts.min.css">
-  <link rel="stylesheet" href="./css/burger.min.css">
-  <link rel="stylesheet" href="./css/all.min.css">
-  <link rel="stylesheet" href="./css/aos.min.css">
-  <link rel="stylesheet" href="./css/owl.carousel.min.css">
-  <link rel="stylesheet" href="./css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="./css/main.min.css">
+  <link rel="stylesheet" href="css/tailwind.min.css">
+  <link rel="stylesheet" href="css/fonts.min.css">
+  <link rel="stylesheet" href="css/burger.min.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/aos.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/main.min.css">
   <link rel="icon" type="image/jpeg" href="https://arjawa.tk/img/favicon.jpeg">
 </head>
 <body class="flex flex-col h-screen justify-between bg-white dark:bg-black">
@@ -212,11 +212,11 @@
       </span>
     </div>
   </div>
-  <script src="./js/jquery.min.js"></script>
-  <script src="./js/jquery.lazy.min.js"></script>
-  <script src="./js/main.min.js"></script>
-  <script src="./js/scrollspy.min.js"></script>
-  <script src="./js/aos.min.js"></script>
-  <script src="./js/owl.carousel.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.lazy.min.js"></script>
+  <script src="js/main.min.js"></script>
+  <script src="js/scrollspy.min.js"></script>
+  <script src="js/aos.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
 </body>
 </html>
