--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
     <div id="fabs" data-aos="fade-up" data-aos-duration="3000" class="fixed bottom-4 right-4">
       <div class="flex flex-col justify-center items-center space-y-6">
-        <a href="#home" class="flex justify-center items-center h-8 w-8 rounded-full shadow-md bg-black dark:bg-transparent text-white border-2 border-transparent dark:border-white">
+        <a data-scroll href="#home" class="flex justify-center items-center h-8 w-8 rounded-full shadow-md bg-black dark:bg-transparent text-white border-2 border-transparent dark:border-white">
           <i class="fas fa-arrow-up"></i>
         </a>
         <div class="relative flex justify-center items-center">
