--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <span class="font-light">&copy;2021 Created by: <span class="color">Arjawa</span>, with <a href="https://tailwindcss.com" class="text-blue-400">tailwindcss</a></span>
       </div>
     </div>
-    <div id="fabs" data-aos="fade-up" data-aos-duration="3000" class="fixed bottom-4 right-4">
+    <div id="fabs" data-aos="fade-up" data-aos-duration="3000" class="fixed bottom-4 md:bottom-14 right-4 md:right-14">
       <div class="flex flex-col justify-center items-center space-y-6">
         <a data-scroll href="#home" class="flex justify-center items-center h-8 w-8 rounded-full shadow-md bg-black dark:bg-transparent text-white border-2 border-transparent dark:border-white">
           <i class="fas fa-arrow-up"></i>
