--- a/index.html
+++ b/index.html
@@ -71,15 +71,14 @@
       <section id="about" data-aos="fade-up" data-aos-duration="3000" class="bg-gray-100 dark:bg-gray-900 pt-2">
         <div class="grid grid-rows-2 md:grid-rows-none md:grid-cols-2 gap-4 m-4 md:mx-14 shadow-md rounded-lg bg-white dark:bg-gray-800">
           <div class="bgColor row-span-full md:m-4 rounded-t-lg md:rounded-lg">
-            <img class="relative lazy rounded-t-lg md:rounded-lg" data-src="img/banner.png" alt="Main Banner">
+            <img class="relative lazy rounded-t-lg md:rounded-lg max-h-80 mx-auto" data-src="img/banner.png" alt="Main Banner">
           </div>
           <div class="flex flex-col justify-center items-center p-4 md:p-2 space-y-4 md:space-y-6">
-            <div data-aos="zoom-in" data-aos-duration="3000" class="flex flex-col justify-start text-1xl md:text-3xl font-light font-semibold dark:text-white">
+            <div data-aos="zoom-in" data-aos-duration="3000" class="flex flex-col justify-start text-1xl lg:text-2xl font-light font-semibold dark:text-white">
               <p>Hai,<br/>
                 Perkenalkan, saya Gede Putra Arjawa.<br/>
                 Saya seorang pelajar SMK asal Indonesia yang mempunyai minat pada dunia programming.<br/>
                 Saat ini saya sedang fokus pada perancangan dan pengembangan prototype website.</p>
-              <br/>
               <span>Tertarik untuk menggunakan jasa saya?</span>
             </div>
             <a data-scroll href="#contacts" class="bgColor hoverColor ringColor px-6 py-2 rounded-sm hover:bg-gray-200 text-white font-light font-semibold transition duration-500 ease-out focus:outline-none focus:ring-2 animate-pulse md:text-2xl">Contact Me</a>
@@ -89,8 +88,8 @@
           <div data-aos="fade-right" data-aos-duration="2500" class="p-4 md:px-14">
             <h2 id="mark" class="relative text-2xl md:text-4xl font-custom dark:text-white">Experiences</h2>
           </div>
-          <div class="flex md:justify-center overflow-x-scroll hide-scroll-bar">
-            <div class="flex flex-nowrap p-4 md:p-14 space-x-4">
+          <div class="flex md:px-12 overflow-x-scroll hide-scroll-bar">
+            <div class="flex flex-nowrap p-4 space-x-4">
               <div data-aos="zoom-in" data-aos-duration="2500" class="group p-4 darkBgGradient hoverBgGradient flex flex-col justify-center items-center w-32 h-36 rounded-xl shadow-md bg-white">
                 <img class="darkBorder lazy h-90 rounded-xl bg-white p-2" data-src="img/html-5.png" alt="html">
                 <span class="text-1xl font-light group-hover:text-white dark:group-hover:text-black">html</span>
@@ -163,11 +162,19 @@
             <div data-aos="fade-right" data-aos-duration="2500" class="py-4">
               <h2 id="mark" class="relative text-2xl md:text-4xl font-custom dark:text-white">Contacts</h2>
             </div>
-            <div data-aos="zoom-in" data-aos-duration="3000" class="flex flex-col md:flex-row justify-center md:justify-around pb-14 pt-4 md:py-14 space-y-4 md:space-y-0 dark:text-white">
-              <a href="https://github.com/arjawa"><i class="fab fa-github w-6"></i><span class="text-blue-500 dark:text-white">github.com/arjawa</span></a>
-              <a href="mailto:arjawa123@gmail.com"><i class="fas fa-envelope w-6"></i><span class="text-blue-500 dark:text-white">arjawa123@gmail.com</span></a>
-              <a href="https://www.facebook.com/gede.putraarjawa"><i class="fab fa-facebook-f w-6"></i><span class="text-blue-500 dark:text-white">facebook.com/gede.putraarjawa</span></a>
-              <a href="https://wa.me/62881037699189"><i class="fab fa-whatsapp w-6"></i><span class="text-blue-500 dark:text-white">wa.me/62881037699189</span></a>
+            <div data-aos="zoom-in" data-aos-duration="3000" class="flex flex-col justify-center pb-14 pt-4 md:py-14 space-y-4 dark:text-white font-light">
+              <div class="flex items-center">
+                <a href="https://github.com/arjawa"><i class="fab fa-github w-6"></i><span class="text-blue-500 dark:text-white">github.com/arjawa</span></a>
+              </div>
+              <div class="flex items-center">
+                <a href="mailto:arjawa123@gmail.com"><i class="fas fa-envelope w-6"></i><span class="text-blue-500 dark:text-white">arjawa123@gmail.com</span></a>
+              </div>
+              <div class="flex items-center">
+                <a href="https://www.facebook.com/gede.putraarjawa"><i class="fab fa-facebook-f w-6"></i><span class="text-blue-500 dark:text-white">facebook.com/gede.putraarjawa</span></a>
+              </div>
+              <div class="flex items-center">
+                <a href="https://wa.me/62881037699189"><i class="fab fa-whatsapp w-6"></i><span class="text-blue-500 dark:text-white">wa.me/62881037699189</span></a>
+              </div>
             </div>
           </div>
         </div>
