--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div id="menuCollapse" class="md:z-20 md:static absolute -top-44 transform h-46 md:h-full w-full bg-black opacity-90 md:bg-transparent md:opacity-100 transition duration-500 ease-in-out">
-            <div id="menuLinks" class="flex flex-col md:flex-row md:justify-around md:items-center h-full w-full py-2 md:py-0 md:pr-5 text-white font-light">
+            <div id="menuLinks" class="flex flex-col md:flex-row md:justify-between md:items-center h-full w-full py-2 md:py-0 text-white font-light">
               <a data-scroll class="active relative p-2 px-5 hover:text-gray-200 hover:bg-gray-900 md:hover:bg-transparent" href="#home">Home</a>
               <a data-scroll class="relative p-2 px-5 hover:text-gray-200 hover:bg-gray-900 md:hover:bg-transparent" href="#about">About</a>
               <a data-scroll class="relative p-2 px-5 hover:text-gray-200 hover:bg-gray-900 md:hover:bg-transparent" href="#projects">Projects</a>
