--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="css/main.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/jpeg" href="https://arjawa.tk/img/favicon.jpeg">
+  <!-- Jquery -->
+  <script src="js/jquery.min.js"></script>
 </head>
 <body>
   
