--- a/index.html
+++ b/index.html
@@ -115,24 +115,12 @@
               <span class="text-1xl font-light group-hover:text-white dark:group-hover:text-black">bootstrap 4</span>
             </div>
             <div data-aos="zoom-in" data-aos-duration="2500" class="col-span-2 group p-4 darkBgGradient hoverBgGradient flex flex-col justify-center items-center w-32 h-36 rounded-xl shadow-md bg-white">
-              <img class="darkBorder lazy h-90 rounded-xl bg-white p-2" data-src="img/tailwindcss.png" alt="tailwindcss">
-              <span class="text-1xl font-light group-hover:text-white dark:group-hover:text-black">tailwindcss</span>
-            </div>
-            <div data-aos="zoom-in" data-aos-duration="2500" class="col-span-2 col-start-2 group p-4 darkBgGradient hoverBgGradient flex flex-col justify-center items-center w-32 h-36 rounded-xl shadow-md bg-white">
-              <img class="darkBorder lazy h-90 rounded-xl bg-white p-2" data-src="img/jquery.png" alt="jquery">
-              <span class="text-1xl font-light group-hover:text-white dark:group-hover:text-black">jquery</span>
-            </div>
-            <div data-aos="zoom-in" data-aos-duration="2500" class="col-span-2 group p-4 darkBgGradient hoverBgGradient flex flex-col justify-center items-center w-32 h-36 rounded-xl shadow-md bg-white">
               <img class="darkBorder lazy h-90 rounded-xl bg-white" data-src="img/php.png" alt="php">
               <span class="text-1xl font-light group-hover:text-white dark:group-hover:text-black">php</span>
             </div>
             <div data-aos="zoom-in" data-aos-duration="2500" class="col-span-2 group p-4 darkBgGradient hoverBgGradient flex flex-col justify-center items-center w-32 h-36 rounded-xl shadow-md bg-white">
               <img class="darkBorder lazy h-90 rounded-xl bg-white p-2" data-src="img/mysql.png" alt="mysql">
               <span class="text-1xl font-light group-hover:text-white dark:group-hover:text-black">mysql</span>
-            </div>
-            <div data-aos="zoom-in" data-aos-duration="2500" class="col-span-2 group p-4 darkBgGradient hoverBgGradient flex flex-col justify-center items-center w-32 h-36 rounded-xl shadow-md bg-white">
-              <img class="darkBorder lazy h-90 rounded-xl bg-white p-2" data-src="img/codeigniter.png" alt="codeigniter 4">
-              <span class="text-1xl font-light group-hover:text-white dark:group-hover:text-black">codeigniter 4</span>
             </div>
           </div>
         </div>
@@ -151,11 +139,12 @@
           </div>
           <div data-aos="fade-up" data-aos-duration="3000">
             <div class="owl-carousel owl-theme">
-              <div class="item"><img class="owl-lazy" data-src="img/projects.jpg" alt="My Projects"></div>
-              <div class="item"><img class="owl-lazy" data-src="img/projects.jpg" alt="My Projects"></div>
-              <div class="item"><img class="owl-lazy" data-src="img/projects.jpg" alt="My Projects"></div>
-              <div class="item"><img class="owl-lazy" data-src="img/projects.jpg" alt="My Projects"></div>
-              <div class="item"><img class="owl-lazy" data-src="img/projects.jpg" alt="My Projects"></div>
+              <div class="item"><img class="owl-lazy" data-src="img/projects/huddle_desktop.png" alt="Hudlde"></div>
+              <div class="item"><img class="owl-lazy" data-src="img/projects/huddle_mobile.png" alt="Huddle"></div>
+              <div class="item"><img class="owl-lazy" data-src="img/projects/blogr_desktop.png" alt="Blogr"></div>
+              <div class="item"><img class="owl-lazy" data-src="img/projects/blogr_mobile.png" alt="Blogr"></div>
+              <div class="item"><img class="owl-lazy" data-src="img/projects/base_apparel_desktop.jpg" alt="Base Apparel"></div>
+              <div class="item"><img class="owl-lazy" data-src="img/projects/base_apparel_mobile.png" alt="Base Apparel"></div>
             </div>
           </div>
         </div>
@@ -182,9 +171,6 @@
               </div>
               <div class="flex items-center">
                 <a href="https://www.facebook.com/gede.putraarjawa"><i class="fab fa-facebook-f w-6"></i><span class="text-blue-500 dark:text-white">facebook.com/gede.putraarjawa</span></a>
-              </div>
-              <div class="flex items-center">
-                <a href="https://wa.me/62881037699189"><i class="fab fa-whatsapp w-6"></i><span class="text-blue-500 dark:text-white">wa.me/62881037699189</span></a>
               </div>
             </div>
           </div>
